<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:weightSum="10"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewServer"
        android:layout_width="164dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/buttonGetPhoto"
        android:layout_width="166dp"
        android:layout_height="49dp"
        android:layout_marginBottom="204dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="0dp"
        android:onClick="onGetPhotoButton_Click"
        android:text="@string/GetPhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonUploadPhoto"
        android:layout_width="163dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:onClick="onTakePhotoButton_Click"
        android:text="@string/TakePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="78dp"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="onSettingButton_Click"
        android:text="@string/title_activity_settings"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>